# jackFitter

./: Makefile.am  Makefile.in  README  cfg.txt  configure  configure.ac  jackFitter-config.in
autom4te.cache/: output.1  requests  traces.0  traces.1
lib/: Makefile.am  Makefile.in  regen.sh  regen_makefile_helper.csh
lib/jackFitter/: .jackknife_fitter.h.swp  ensem_data.cc  ensem_data.h  ensem_ensem_chisq_fitter.cc  ensem_ensem_chisq_fitter.h  fit_correlators.cc  fit_correlators.h  fit_forms.cc  jackFitter.h  jackknife_fitter.cc  jackknife_fitter.h  plot.cc  plot.h  three_point_fit.cc  three_point_fit.h  three_point_fit_bias_functions.cc  three_point_fit_bias_functions.h  three_point_fit_compatators.cc  three_point_fit_compatators.h  three_point_fit_forms.cc  three_point_fit_forms.h  three_point_fit_functions.h  three_point_xml.cc  three_point_xml.h
src/: Makefile.am  Makefile.in  fit_Z_const_and_exp.cc  fit_const.cc  fit_corr_cosh.cc  fit_corr_cosh_and_const.cc  fit_corr_exp.cc  fit_corr_exp_and_const.cc  fit_corr_exp_cmplx.cc  fit_corr_finT.cc  fit_jack_threepoint.cc  fit_jack_threepoint_xml.cc  fit_multiple_princorrs.cc  fit_prin_corr.cc  test_ensem_ensem_fitter.cc  threepoint.fit.ini.xml  timeslice_covariance.cc
